nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nginx-deployment
  labels:
    web: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      web: frontend
  template:
    metadata:
      labels:
        web: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    web: frontend
  ports:
  - name: nginx-port
    protocol: TCP
    port: 9001          # Порт, на котором сервис принимает запросы
    targetPort: 80    # Порт, на который пересылает внутри пода (nginx)
